# lttv

./: .gitignore  COPYING  ChangeLog  Makefile.am  README  bootstrap  configure.ac  runlttv
debug/: gtk.suppression
doc/developer/: lttng-lttv-compatibility.html
doc/user/user_guide/docbook/: user_guide.docbook
ltt/: Makefile.am  event.c  event.h  jni_interface.c  ltt-private.h  lttvtraceread_loader.c  time.h  trace.h  tracefile.c
lttv/lttv/: Makefile.am  attribute.c  attribute.h  batchtest.c  compiler.h  contextmacros.h  event.c  event.h  filter.c  filter.h  hook.c  hook.h  iattribute.c  iattribute.h  lttv-gui.sh  lttv.h  main.c  module.c  module.h  option.c  option.h  print.c  print.h  state.c  state.h  stats.c  stats.h  time.h  trace.h  tracecontext.c  tracecontext.h  traceset-process.c  traceset-process.h  traceset.c  traceset.h
lttv/lttv/sync/: event_analysis_chull.c  event_analysis_linreg.c  event_processing_lttng_standard.c  event_processing_text.c  sync_chain_lttv.c  sync_chain_unittest.c
lttv/modules/gui/: Makefile.am
lttv/modules/gui/controlflow/: cfv.c  cfv.h  drawing.c  drawing.h  drawitem.c  eventhooks.c  eventhooks.h  lttv_plugin_cfv.c  lttv_plugin_cfv.h  module.c  processlist.c  processlist.h
lttv/modules/gui/detailedevents/: events.c  events.h  lttv_plugin_evd.c  lttv_plugin_evd.h
lttv/modules/gui/diskperformance/: diskperformance.c
lttv/modules/gui/filter/: filter.c
lttv/modules/gui/histogram/: Makefile.am  histobuttonwidget.c  histobuttonwidget.h  histocfv.c  histocfv.h  histodrawing.c  histodrawing.h  histodrawitem.c  histodrawitem.h  histoeventhooks.c  histoeventhooks.h  histomodule.c
lttv/modules/gui/interrupts/: interrupts.c
lttv/modules/gui/lttvwindow/lttvwindow/: Makefile.am  callbacks.c  callbacks.h  computetrace.c  gtkmultivpaned.c  gtkmultivpaned.h  init_module.c  interface.c  interface.h  lttv_plugin.c  lttv_plugin.h  lttv_plugin_tab.c  lttv_plugin_tab.h  lttvwindow.c  lttvwindow.h  lttvwindowtraces.c  lttvwindowtraces.h  mainwindow-private.h  mainwindow.h  menu.c  menu.h  support.c  support.h  timebar.c  timebar.h  timeentry.c  timeentry.h  toolbar.c  toolbar.h
lttv/modules/gui/lttvwindow/pixmaps/: Makefile.am
lttv/modules/gui/resourceview/: cfv.c  cfv.h  drawing.c  drawing.h  drawitem.c  drawitem.h  eventhooks.c  eventhooks.h  lttv_plugin_cfv.c  module.c  processlist.c  processlist.h  test.c
lttv/modules/gui/statistics/: statistics.c
lttv/modules/gui/tracecontrol/: tracecontrol.c
lttv/modules/gui/tutorial/: tutorial.c
lttv/modules/text/: Makefile.am  batchAnalysis.c  batchanalysis.h  depanalysis.c  formattedDump.c  precomputeState.c  sync_chain_batch.c  textDump.c  textFilter.c
specs/: lttv.spec
